# pipelinewise

./: setup.py
singer-connectors/tap-mysql/: pyproject.toml
singer-connectors/tap-mysql/src/tap_mysql/: __init__.py  connection.py  discover_utils.py
singer-connectors/tap-mysql/src/tap_mysql/sync_strategies/: binlog.py  common.py  full_table.py
singer-connectors/tap-postgres/: pyproject.toml  setup.py
singer-connectors/tap-postgres/src/tap_postgres/: __init__.py  db.py  stream_utils.py
singer-connectors/tap-postgres/src/tap_postgres/sync_strategies/: full_table.py  incremental.py  logical_replication.py
singer-connectors/tap-postgres/tap_postgres/: __init__.py  db.py  discovery_utils.py
singer-connectors/target-postgres/: pyproject.toml
singer-connectors/target-postgres/src/target_postgres/: __init__.py  db_sync.py
singer-connectors/target-postgres/target_postgres/: db_sync.py
