
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tap-mysql"
version = "1.6"
description = "Singer.io tap for loading data from MySQL - PipelineWise compatible"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  'singer-python>=6.1.1',
  'pendulum==3.0.0',
  'mysql-replication==0.43',
  'PyMySQL==1.1.*',
  'plpygis==0.2.1',
  'tzlocal==4.0.2',
  'nose==1.3.*',
  'pylint==2.13.2',
  'nose-cov==1.6',
  'setuptools==78.1.0'
]
authors = []
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3 :: Only'
]

[project.scripts]
tap-mysql = "tap_mysql:main"

[project.urls]
Repository = 'https://github.com/dusc-dev/pipelinewise'

[tool.uv]
override-dependencies = [
  "jsonschema>=4.23.0"
]
